--- a/_toc.yml
+++ b/_toc.yml
@@ -3,7 +3,19 @@
 
 format: jb-book
 root: intro
-chapters:
-- file: markdown
-- file: notebooks
-- file: markdown-notebooks
+
+parts:
+  - caption: About me
+    chapters:
+    - file: cv
+    - file: publications
+  #   - file: path/to/part1/chapter2
+  # - caption: Name of Not-numbered Part 2
+  #   chapters:
+  #   - file: path/to/part2/chapter1
+  #   - file: path/to/part2/chapter2
+
+# chapters:
+# - file: markdown
+# - file: notebooks
+# - file: markdown-notebooks
