--- a/_config.yml
+++ b/_config.yml
@@ -23,14 +23,15 @@ bibtex_bibfiles:
 
 # Information about where the book exists on the web
 repository:
-  url: https://github.com/kunzhoudk/kzspace.git # Online location of your book
+  url: https://github.com/kunzhoudk/kzspace # Online location of your book
   path_to_book:  ""  # Optional path to your book, relative to the repository root
-  branch: master  # Which branch of the repository should be used when creating links (optional)
+  branch: main  # Which branch of the repository should be used when creating links (optional)
 
 launch_buttons:
   notebook_interface: "classic" # The interface interactive links will activate ["classic", "jupyterlab"]
-  binderhub_url: "https://mybinder.org"
   colab_url: "https://colab.research.google.com"
+  binderhub_url: "https://mybinder.org"
+  notebook_interface: "jupyterlab"
   thebe: true
 
 # Add GitHub buttons to your book
