--- a/.github/workflows/pages-depoly.yml
+++ b/.github/workflows/pages-depoly.yml
@@ -14,16 +14,18 @@ on:
 
 # This job installs dependencies, builds the book, and pushes it to `gh-pages`
 jobs:
-  deploy-book:
+  deploy-jupyter-book:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
+
     # Setup Python (faster than using Python container)
-     - name: Setup Python 3.9
-       uses: actions/setup-python@v3
-       with:
-         python-version: 3.9  
-    # Install dependencies
+    - name: Setup Python 3.9
+      uses: actions/setup-python@v3
+      with:
+        python-version: 3.9  
+
+    # Install pipenv
     - name: Install pipenv
       run: |
         python -m pip install --upgrade pipenv wheel
@@ -33,6 +35,7 @@ jobs:
         path: ~/.local/share/virtualenvs
         key: ${{ runner.os }}-pipenv-${{ hashFiles('**/Pipfile.lock') }}
 
+    # Install dependencies
     - name: Install dependencies
       if: steps.cache-pipenv.outputs.cache-hit != 'true'
       run: |
