--- a/.github/workflows/pages-depoly.yml
+++ b/.github/workflows/pages-depoly.yml
@@ -25,30 +25,18 @@ jobs:
       with:
         python-version: 3.9  
 
-    # Install pipenv
-    - name: Install pipenv
-      run: |
-        python -m pip install --upgrade pipenv wheel
-    - id: cache-pipenv
-      uses: actions/cache@v1
-      with:
-        path: ~/.local/share/virtualenvs
-        key: ${{ runner.os }}-pipenv-${{ hashFiles('**/Pipfile.lock') }}
-
-    # Install dependencies
     - name: Install dependencies
-      if: steps.cache-pipenv.outputs.cache-hit != 'true'
       run: |
-        pipenv install --deploy --dev
+        pip install -r requirements.txt
 
     # Build the book
     - name: Build the book
       run: |
         jupyter-book build .
-
+        
     # Push the book's HTML to github-pages
     - name: GitHub Pages action
-      uses: peaceiris/actions-gh-pages@v3.6.1
+      uses: peaceiris/actions-gh-pages@v3.5.9
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: ./_build/html
