--- a/.github/workflows/book-depoly.yml
+++ b/.github/workflows/book-depoly.yml
@@ -38,6 +38,7 @@ jobs:
       run: |
         pipenv install --deploy --dev
     
+    # check virtual env
     - name: check virtualenv
         pip -V 
 
