--- a/.github/workflows/book-depoly.yml
+++ b/.github/workflows/book-depoly.yml
@@ -29,31 +29,31 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
 
-    - name: Check python version
-      run: |
-        python -V
+    # - name: Check python version
+    #   run: |
+    #     python -V
         
-    - name: Install requirements
-      run: |
-        python -m pip install --upgrade pip
-        pip install pipenv
+    # - name: Install requirements
+    #   run: |
+    #     python -m pip install --upgrade pip
+    #     pip install pipenv
 
-    - name: Install dependencies
-      run: |
-        pipenv install --deploy --dev
+    # - name: Install dependencies
+    #   run: |
+    #     pipenv install --deploy --dev
     
-    # check virtual env
-    - name: check virtualenv
-        pip -V 
+    # # check virtual env
+    # - name: check virtualenv
+    #     pip -V 
 
-    # Build the book
-    - name: Build the book
-      run: |
-        jupyter-book build .
+    # # Build the book
+    # - name: Build the book
+    #   run: |
+    #     jupyter-book build .
         
-    # Push the book's HTML to github-pages
-    - name: GitHub Pages action
-      uses: peaceiris/actions-gh-pages@v3.5.9
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./_build/html
+    # # Push the book's HTML to github-pages
+    # - name: GitHub Pages action
+    #   uses: peaceiris/actions-gh-pages@v3.5.9
+    #   with:
+    #     github_token: ${{ secrets.GITHUB_TOKEN }}
+    #     publish_dir: ./_build/html
