check python version

--- a/.github/workflows/book-depoly.yml
+++ b/.github/workflows/book-depoly.yml
@@ -29,9 +29,9 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
 
-    # - name: Check python version
-    #   run: |
-    #     python -V
+    - name: Check python version
+      run: |
+        python -V
         
     # - name: Install requirements
     #   run: |
