--- a/.github/workflows/book-depoly.yml
+++ b/.github/workflows/book-depoly.yml
@@ -33,10 +33,10 @@ jobs:
       run: |
         python -V
         
-    # - name: Install requirements
-    #   run: |
-    #     python -m pip install --upgrade pip
-    #     pip install pipenv
+    - name: Install pipenv
+      run: |
+        python -m pip install --upgrade pip
+        pip install pipenv
 
     # - name: Install dependencies
     #   run: |
