--- a/_config.yml
+++ b/_config.yml
@@ -28,10 +28,9 @@ repository:
   branch: main  # Which branch of the repository should be used when creating links (optional)
 
 launch_buttons:
-  notebook_interface: "classic" # The interface interactive links will activate ["classic", "jupyterlab"]
+  notebook_interface: "jupyterlab" # The interface interactive links will activate ["classic", "jupyterlab"]
   colab_url: "https://colab.research.google.com"
-  binderhub_url: "https://mybinder.org"
-  notebook_interface: "jupyterlab"
+  # binderhub_url: "https://mybinder.org"
   thebe: true
 
 # Add GitHub buttons to your book
