added linear algebra

--- a/_toc.yml
+++ b/_toc.yml
@@ -9,10 +9,12 @@ parts:
     chapters:
     - file: about-me/cv
     - file: about-me/publications
-    
     - file: deep-learning/fourier_transform
     - file: notebooks
-  # - caption: Name of Not-numbered Part 2
+
+  - caption: Linear algebra
+    chapters:
+    - file: linear-algebra/Gaussian_Elimination
   #   chapters:
   #   - file: path/to/part2/chapter1
   #   - file: path/to/part2/chapter2
