--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,41 @@
+absl-py==1.2.0
 alabaster==0.7.12
 anyio==3.6.1
 appnope==0.1.3
 argon2-cffi==21.3.0
 argon2-cffi-bindings==21.2.0
 asttokens==2.0.8
+astunparse==1.6.3
 attrs==21.4.0
 Babel==2.10.3
 backcall==0.2.0
 beautifulsoup4==4.11.1
 bleach==5.0.1
+cachetools==5.2.0
 certifi==2022.6.15
 cffi==1.15.1
 charset-normalizer==2.1.1
 click==8.1.3
 colorama==0.4.5
+cycler==0.11.0
 debugpy==1.6.3
 decorator==5.1.1
 defusedxml==0.7.1
 docutils==0.17.1
 entrypoints==0.4
-executing==0.10.0
+executing==1.0.0
 fastjsonschema==2.16.1
-ghp-import==2.1.0
+flatbuffers==1.12
+fonttools==4.37.1
+gast==0.4.0
 gitdb==4.0.9
 GitPython==3.1.27
-greenlet==1.1.2
+google-auth==2.11.0
+google-auth-oauthlib==0.4.6
+google-pasta==0.2.0
+greenlet==1.1.3
+grpcio==1.47.0
+h5py==3.7.0
 idna==3.3
 imagesize==1.4.1
 importlib-metadata==4.12.0
@@ -37,18 +48,24 @@ Jinja2==3.1.2
 jsonschema==3.2.0
 jupyter-book==0.13.1
 jupyter-cache==0.4.3
-jupyter-client==7.3.4
 jupyter-core==4.11.1
 jupyter-server==1.18.1
 jupyter-server-mathjax==0.2.6
 jupyter-sphinx==0.3.2
+jupyter_client==7.3.5
 jupyterlab-pygments==0.2.2
 jupyterlab-widgets==1.1.1
+keras==2.9.0
+Keras-Preprocessing==1.1.2
+kiwisolver==1.4.4
 latexcodec==2.0.1
+libclang==14.0.6
 linkify-it-py==1.0.3
 lxml==4.9.1
+Markdown==3.4.1
 markdown-it-py==1.1.0
 MarkupSafe==2.1.1
+matplotlib==3.5.3
 matplotlib-inline==0.1.6
 mdit-py-plugins==0.2.8
 mistune==0.8.4
@@ -60,16 +77,23 @@ nbdime==3.1.1
 nbformat==5.4.0
 nest-asyncio==1.5.5
 notebook==6.4.12
+numpy==1.23.2
+oauthlib==3.2.0
+opt-einsum==3.3.0
 packaging==21.3
 pandocfilters==1.5.0
 parso==0.8.3
 pexpect==4.8.0
 pickleshare==0.7.5
+Pillow==9.2.0
 prometheus-client==0.14.1
 prompt-toolkit==3.0.30
+protobuf==3.19.4
 psutil==5.9.1
 ptyprocess==0.7.0
 pure-eval==0.2.2
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
 pybtex==0.24.0
 pybtex-docutils==1.0.2
 pycparser==2.21
@@ -82,6 +106,9 @@ pytz==2022.2.1
 PyYAML==6.0
 pyzmq==23.2.1
 requests==2.28.1
+requests-oauthlib==1.3.1
+rsa==4.9
+scipy==1.9.1
 Send2Trash==1.8.0
 six==1.16.0
 smmap==5.0.0
@@ -106,15 +133,25 @@ sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==1.0.3
 sphinxcontrib-serializinghtml==1.1.5
 SQLAlchemy==1.4.40
-stack-data==0.4.0
+stack-data==0.5.0
+tensorboard==2.9.1
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.1
+tensorflow==2.9.1
+tensorflow-estimator==2.9.0
+tensorflow-io-gcs-filesystem==0.26.0
+termcolor==1.1.0
 terminado==0.15.0
 tinycss2==1.1.1
 tornado==6.2
 traitlets==5.3.0
+typing_extensions==4.3.0
 uc-micro-py==1.0.1
 urllib3==1.26.12
 wcwidth==0.2.5
 webencodings==0.5.1
-websocket-client==1.3.3
+websocket-client==1.4.0
+Werkzeug==2.2.2
 widgetsnbextension==3.6.1
+wrapt==1.14.1
 zipp==3.8.1
