added github undo changes docs

--- a/_toc.yml
+++ b/_toc.yml
@@ -28,7 +28,9 @@ parts:
     - file: docker/01-images-containers
     - file: docker/02-data-volumes
     - file: docker/03-networks-requests
-
+  - caption: Github
+    chapters:
+    - file: github/undo-changes
 # chapters:
 # - file: markdown
 # - file: notebooks
