updated table of contents for multi-github accounts with ssh kyes

--- a/_toc.yml
+++ b/_toc.yml
@@ -30,6 +30,7 @@ parts:
     - file: docker/03-networks-requests
   - caption: Github
     chapters:
+    - file: github/multiple-github-accounts-ssh
     - file: github/undo-changes
 # chapters:
 # - file: markdown
